--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,9 @@
+<div class="row">
+  <img src="\assets\Book-Resources-Header.jpg" /><img
+    style="margin-left: 450px"
+    src="\assets\Book-Resources-Header.jpg"
+  />
+</div>
+
 <app-header></app-header>
 <router-outlet></router-outlet>
