--- a/src/app/book/admin-books/admin-books.component.html
+++ b/src/app/book/admin-books/admin-books.component.html
@@ -1,3 +1,15 @@
+<link
+  rel="stylesheet"
+  href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+  integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+  crossorigin="anonymous"
+/>
+<link
+  rel="stylesheet"
+  href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+  integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+  crossorigin="anonymous"
+/>
 <div class="container">
   <div class="row">
     <br />
@@ -54,9 +66,9 @@
               >
                 Edit
               </button>
-              <button class="btn btn-danger" (click)="onDelete(group.id)">
-                Delete
-              </button>
+              <a class="btn btn-danger" (click)="onDelete(group.id)">
+                <i class="icon-trash icon-large"></i> Delete</a
+              >
             </td>
           </tr>
         </tbody>
