--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,7 +8,7 @@
       <a
         style="margin-left: 20px; color: aliceblue"
         class="navbar-brand"
-        routerLink="/"
+        routerLink="/home"
         routerLinkActive="active"
         >BookInvet</a
       >
@@ -27,7 +27,7 @@
       >
     </li>
     <li style="padding-top: 3px; margin-right: 50px">
-      <a class="drop">UserName</a>
+      <a class="drop"> UserName</a>
       <ul>
         <li>
           <a
