--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,20 +1,8 @@
-.row0,
-.row0 a {
-}
-.row1,
-.row1 a {
-}
-.row2,
-.row2 a {
-}
-.row3,
-.row3 a {
-}
-.row4,
-.row4 a {
-}
-.row5,
-.row5 a {
+.example-card {
+  max-width: 250px;
+  max-height: 450px;
+  margin-right: 20px;
+  margin-bottom: 20px;
 }
 
 /* Top Bar
