--- a/src/app/book/admin-books/admin-books.component.html
+++ b/src/app/book/admin-books/admin-books.component.html
@@ -67,7 +67,7 @@
                 Edit
               </button>
               <a class="btn btn-danger" (click)="onDelete(group.id)">
-                <i class="icon-trash icon-large"></i> Delete</a
+                <i class="far fa-trash-alt"></i> Delete</a
               >
             </td>
           </tr>
