--- a/src/app/book/book-form/book-form.component.html
+++ b/src/app/book/book-form/book-form.component.html
@@ -2,10 +2,10 @@
   <div class="sidenav">
     <div class="login-main-text">
       <h2>
-        Application<br />
-        Register
+        Book<br />
+        Create
       </h2>
-      <p>Register from here to access.</p>
+      <p>Create or Edit.</p>
     </div>
   </div>
 
