--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -2,6 +2,7 @@
   max-width: 250px;
   max-height: 450px;
   margin-right: 20px;
+  margin-left: 40px;
   margin-bottom: 20px;
 }
 
@@ -543,17 +544,22 @@ td {
   color: #00acee;
 }
 
-/* ------------------------------------------------------------------------------------------------------------ */
-/* ------------------------------------------------------------------------------------------------------------ */
-/* ------------------------------------------------------------------------------------------------------------ */
-/* ------------------------------------------------------------------------------------------------------------ */
-/* ------------------------------------------------------------------------------------------------------------ */
-
 /* Colours
 --------------------------------------------------------------------------------------------------------------- */
+.scroll-to-top {
+  position: fixed;
+  bottom: 15px;
+  right: 15px;
+  opacity: 0;
+  transition: all 0.2s ease-in-out;
+}
+.show-scrollTop {
+  opacity: 1;
+  transition: all 0.2s ease-in-out;
+}
 body {
   color: #888888;
-  background-color: #252b34;
+  background-color: black;
 }
 a {
   color: #82b440;
